Add RefreshOktaAws and modify bash scripts to use absolute path
Set sig vals in config. properties
Set signifyd in pom version

--- a/config.properties
+++ b/config.properties
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-OKTA_ORG=acmecorp.oktapreview.com
-OKTA_AWS_APP_URL=https://acmecorp.oktapreview.com/home/amazon_aws/0oa5zrwfs815KJmVF0h7/137
+OKTA_ORG=signifyd.okta.com
+OKTA_AWS_APP_URL=https://signifyd.okta.com/home/amazon_aws/0oa8gjcys3ySTpkor0x7/272
 OKTA_USERNAME=
 OKTA_PASSWORD=
 OKTA_AWS_ROLE_TO_ASSUME=
